@@ -23,6 +23,7 @@ import codecs
 import os
 import locale
 import sys
+
 from ubiquity import misc, im_switch
 
 # if 'just_country' is True, only the country is changing
