@@ -17,6 +17,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 
+from collections import namedtuple, OrderedDict
 import os
 import re
 import shutil
@@ -29,7 +30,6 @@ from ubiquity import parted_server
 from ubiquity import misc
 from ubiquity import osextras
 from ubiquity.install_misc import archdetect
-from collections import namedtuple, OrderedDict
 
 NAME = 'partman'
 AFTER = 'prepare'
