@@ -17,8 +17,10 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 
+import os
+import sys
+
 from ubiquity import plugin
-import os, sys
 
 NAME = 'webcam'
 AFTER = 'usersetup'
